--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,10 +18,10 @@ jobs:
         node-version: '16'
 
     - name: Install dependencies
-      run: npm install
+      run: yarn
 
     - name: Build
-      run: npm run build:prod
+      run: yarn build:prod
 
     - name: Deploy
       if: success()
