--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,7 +21,7 @@ jobs:
       run: yarn
 
     - name: Build
-      run: yarn build:prod
+      run: yarn build
 
     - name: Deploy
       if: success()
