--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.2",
     "@angular/platform-browser-dynamic": "^15.2.2",
     "@angular/router": "^15.2.2",
+    "@angular/service-worker": "^15.2.2",
     "@calumk/editorjs-codeflask": "^1.0.9",
     "@editorjs/editorjs": "^2.26.5",
     "@editorjs/embed": "^2.5.3",
