--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonpath": "^1.1.1",
     "ngx-mqtt": "^15.0.0-alpha.1",
     "peerjs": "^1.4.7",
+    "rxdb": "^14.3.6",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.3",
     "tslib": "^2.3.0",
