--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/marker": "^1.3.0",
     "editorjs-alert": "^1.0.3",
+    "immutable": "^4.3.0",
     "jsonpath": "^1.1.1",
     "ngx-mqtt": "^15.0.0-alpha.1",
     "peerjs": "^1.4.7",
     "rxdb": "^14.3.6",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.3",
+    "ts-pattern": "^4.2.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
