--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@editorjs/header": "^2.7.0",
     "@editorjs/list": "^1.8.0",
     "@editorjs/marker": "^1.3.0",
+    "brotli-wasm": "^1.3.1",
     "editorjs-alert": "^1.0.3",
     "immutable": "^4.3.0",
     "jsonpath": "^1.1.1",
