feat: we've added a better JS editor, that is, CodeMirror 🥳

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
-# Visual Studio Code
+# Visual Studio CodeBlock
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
