--- a/package.json
+++ b/package.json
@@ -20,20 +20,29 @@
     "@angular/router": "^15.2.2",
     "@angular/service-worker": "^15.2.2",
     "@calumk/editorjs-codeflask": "^1.0.9",
+    "@codemirror/lang-javascript": "^6.1.4",
     "@editorjs/editorjs": "^2.26.5",
     "@editorjs/embed": "^2.5.3",
     "@editorjs/header": "^2.7.0",
     "@editorjs/list": "^1.8.0",
     "@editorjs/marker": "^1.3.0",
+    "@uiw/codemirror-extensions-color": "^4.19.9",
+    "@uiw/codemirror-extensions-hyper-link": "^4.19.9",
     "brotli-wasm": "^1.3.1",
+    "codemirror": "^6.0.1",
     "editorjs-alert": "^1.0.3",
+    "editorjs-break-line": "^1.0.9",
+    "editorjs-inline-image": "^1.2.4",
+    "eslint-linter-browserify": "^8.36.0",
     "immutable": "^4.3.0",
     "jsonpath": "^1.1.1",
+    "mathlive": "^0.90.6",
     "ngx-mqtt": "^15.0.0-alpha.1",
     "peerjs": "^1.4.7",
     "rxdb": "^14.3.6",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.3",
+    "thememirror": "^2.0.1",
     "ts-pattern": "^4.2.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -46,8 +55,6 @@
     "@editorjs/warning": "^1.3.0",
     "@types/jasmine": "~4.3.0",
     "@types/jsonpath": "^0.2.0",
-    "editorjs-break-line": "^1.0.9",
-    "editorjs-inline-image": "^1.2.4",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
