--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@editorjs/header": "^2.7.0",
     "@editorjs/list": "^1.8.0",
     "@editorjs/marker": "^1.3.0",
+    "chart.js": "^4.2.1",
     "codemirror": "^6.0.1",
     "editorjs-alert": "^1.0.3",
     "editorjs-break-line": "^1.0.9",
