--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/marker": "^1.3.0",
     "chart.js": "^4.2.1",
+    "chartjs-plugin-annotation": "^2.2.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "codemirror": "^6.0.1",
     "editorjs-alert": "^1.0.3",
     "editorjs-break-line": "^1.0.9",
@@ -33,6 +35,7 @@
     "eslint-linter-browserify": "^8.36.0",
     "immutable": "^4.3.0",
     "jsonpath": "^1.1.1",
+    "mathjs": "^11.7.0",
     "mathlive": "^0.90.6",
     "ngx-mqtt": "^15.0.0-alpha.1",
     "peerjs": "^1.4.7",
