--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.2",
     "@angular/service-worker": "^15.2.2",
     "@codemirror/lang-javascript": "^6.1.4",
+    "@cortex-js/compute-engine": "^0.12.2",
     "@editorjs/editorjs": "^2.26.5",
     "@editorjs/embed": "^2.5.3",
     "@editorjs/header": "^2.7.0",
