--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,6 +39,8 @@ jobs:
         run: yarn
       - name: Build
         run: yarn build
+      - name: Build jsonforms
+        run: cd jsonforms-react-seed && yarn && yarn build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
