feat: change homepage because react lives on subdirectory

--- a/jsonforms-react-seed/package.json
+++ b/jsonforms-react-seed/package.json
@@ -1,7 +1,8 @@
 {
   "name": "jsonforms-react-seed",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "homepage": "/form",
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
