--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@editorjs/header": "^2.7.0",
     "@editorjs/list": "^1.8.0",
     "@editorjs/marker": "^1.3.0",
+    "autoprefixer": "^10.4.14",
     "chart.js": "^4.2.1",
     "chartjs-plugin-annotation": "^2.2.1",
     "chartjs-plugin-datalabels": "^2.2.0",
@@ -40,8 +41,10 @@
     "mathlive": "^0.90.6",
     "ngx-mqtt": "^15.0.0-alpha.1",
     "peerjs": "^1.4.7",
+    "postcss": "^8.4.21",
     "rxdb": "^14.3.6",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.3.0",
     "thememirror": "^2.0.1",
     "ts-pattern": "^4.2.1",
     "tslib": "^2.3.0",
