--- a/package.json
+++ b/package.json
@@ -21,20 +21,24 @@
     "@angular/service-worker": "^15.2.2",
     "@codemirror/lang-javascript": "^6.1.4",
     "@cortex-js/compute-engine": "^0.12.2",
+    "@editorjs/delimiter": "^1.3.0",
     "@editorjs/editorjs": "^2.26.5",
     "@editorjs/embed": "^2.5.3",
     "@editorjs/header": "^2.7.0",
     "@editorjs/list": "^1.8.0",
     "@editorjs/marker": "^1.3.0",
+    "@editorjs/table": "^2.2.1",
+    "@sotaproject/strikethrough": "^1.0.1",
     "autoprefixer": "^10.4.14",
     "chart.js": "^4.2.1",
     "chartjs-plugin-annotation": "^2.2.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "codemirror": "^6.0.1",
     "editorjs-alert": "^1.0.3",
-    "editorjs-break-line": "^1.0.9",
+    "editorjs-drag-drop": "^1.1.13",
     "editorjs-inline-image": "^1.2.4",
     "editorjs-mermaid": "^1.0.0",
+    "editorjs-text-color-plugin": "^2.0.2",
     "eslint-linter-browserify": "^8.36.0",
     "immutable": "^4.3.0",
     "jsonpath": "^1.1.1",
