--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              "src/app/shell/peer.js"
+              "src/app/notebook/shell/peer.js"
             ],
             "webWorkerTsConfig": "tsconfig.worker.json",
             "serviceWorker": true,
