--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/service-worker": "^15.2.2",
     "@codemirror/lang-javascript": "^6.1.4",
     "@cortex-js/compute-engine": "^0.12.2",
+    "@editorjs/attaches": "^1.3.0",
     "@editorjs/delimiter": "^1.3.0",
     "@editorjs/editorjs": "^2.26.5",
     "@editorjs/embed": "^2.5.3",
