--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build --configuration production  --allowed-common-js-dependencies",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run terminal:serve-ssr",
+    "serve:ssr": "node dist/terminal/server/main.js",
+    "build:ssr": "ng build && ng run terminal:server",
+    "prerender": "ng run terminal:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,6 +21,7 @@
     "@angular/forms": "^15.2.2",
     "@angular/platform-browser": "^15.2.2",
     "@angular/platform-browser-dynamic": "^15.2.2",
+    "@angular/platform-server": "^15.2.2",
     "@angular/router": "^15.2.2",
     "@angular/service-worker": "^15.2.2",
     "@codemirror/lang-javascript": "^6.1.4",
@@ -29,6 +34,7 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/marker": "^1.3.0",
     "@editorjs/table": "^2.2.1",
+    "@nguniversal/express-engine": "^15.2.0",
     "@sotaproject/strikethrough": "^1.0.1",
     "autoprefixer": "^10.4.14",
     "chart.js": "^4.2.1",
@@ -41,6 +47,7 @@
     "editorjs-mermaid": "^1.0.0",
     "editorjs-text-color-plugin": "^2.0.2",
     "eslint-linter-browserify": "^8.36.0",
+    "express": "^4.15.2",
     "immutable": "^4.3.0",
     "jsonpath": "^1.1.1",
     "mathjs": "^11.7.0",
@@ -50,7 +57,6 @@
     "postcss": "^8.4.21",
     "rxdb": "^14.3.6",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^3.3.0",
     "thememirror": "^2.0.1",
     "ts-pattern": "^4.2.1",
     "tslib": "^2.3.0",
@@ -62,8 +68,11 @@
     "@angular/compiler-cli": "^15.2.2",
     "@editorjs/checklist": "^1.4.0",
     "@editorjs/warning": "^1.3.0",
+    "@nguniversal/builders": "^15.2.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
     "@types/jsonpath": "^0.2.0",
+    "@types/node": "^14.15.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
