--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.2",
+    "@angular/cdk": "15.2.5",
     "@angular/common": "^15.2.2",
     "@angular/compiler": "^15.2.2",
     "@angular/core": "^15.2.2",
+    "@angular/elements": "^15.2.5",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.2",
+    "@angular/material": "15.2.5",
     "@angular/platform-browser": "^15.2.2",
     "@angular/platform-browser-dynamic": "^15.2.2",
     "@angular/platform-server": "^15.2.2",
@@ -34,6 +38,9 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/marker": "^1.3.0",
     "@editorjs/table": "^2.2.1",
+    "@jsonforms/angular": "^3.0.0",
+    "@jsonforms/angular-material": "^3.0.0",
+    "@jsonforms/core": "^3.0.0",
     "@nguniversal/express-engine": "^15.2.0",
     "@sotaproject/strikethrough": "^1.0.1",
     "autoprefixer": "^10.4.14",
