--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@jsonforms/core": "^3.0.0",
     "@nguniversal/express-engine": "^15.2.0",
     "@sotaproject/strikethrough": "^1.0.1",
+    "@types/lodash": "^4.14.192",
     "autoprefixer": "^10.4.14",
     "chart.js": "^4.2.1",
     "chartjs-plugin-annotation": "^2.2.1",
