--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "@fortawesome/fontawesome-free/css/all.css"
             ],
             "scripts": [
               "src/app/notebook/shell/peer.js"
