--- a/package.json
+++ b/package.json
@@ -1,92 +1,92 @@
 {
   "name": "evanotebook",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng serve",
     "build": "ng build --configuration production  --allowed-common-js-dependencies",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "dev:ssr": "ng run terminal:serve-ssr",
     "serve:ssr": "node dist/terminal/server/main.js",
     "build:ssr": "ng build && ng run terminal:server",
-    "prerender": "ng run terminal:prerender"
+    "prerender": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng run terminal:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.2",
+    "@angular/animations": "15.2.5",
     "@angular/cdk": "15.2.5",
-    "@angular/common": "^15.2.2",
-    "@angular/compiler": "^15.2.2",
-    "@angular/core": "^15.2.2",
-    "@angular/elements": "^15.2.5",
-    "@angular/flex-layout": "^15.0.0-beta.42",
-    "@angular/forms": "^15.2.2",
+    "@angular/common": "15.2.5",
+    "@angular/compiler": "15.2.5",
+    "@angular/core": "15.2.5",
+    "@angular/elements": "15.2.5",
+    "@angular/flex-layout": "15.0.0-beta.42",
+    "@angular/forms": "15.2.5",
     "@angular/material": "15.2.5",
-    "@angular/platform-browser": "^15.2.2",
-    "@angular/platform-browser-dynamic": "^15.2.2",
-    "@angular/platform-server": "^15.2.2",
-    "@angular/router": "^15.2.2",
-    "@angular/service-worker": "^15.2.2",
-    "@codemirror/lang-javascript": "^6.1.4",
-    "@cortex-js/compute-engine": "^0.12.2",
-    "@editorjs/attaches": "^1.3.0",
-    "@editorjs/delimiter": "^1.3.0",
-    "@editorjs/editorjs": "^2.26.5",
-    "@editorjs/embed": "^2.5.3",
-    "@editorjs/header": "^2.7.0",
-    "@editorjs/list": "^1.8.0",
-    "@editorjs/marker": "^1.3.0",
-    "@editorjs/table": "^2.2.1",
-    "@jsonforms/angular": "^3.0.0",
-    "@jsonforms/angular-material": "^3.0.0",
-    "@jsonforms/core": "^3.0.0",
-    "@nguniversal/express-engine": "^15.2.0",
-    "@sotaproject/strikethrough": "^1.0.1",
-    "@types/lodash": "^4.14.192",
-    "autoprefixer": "^10.4.14",
-    "chart.js": "^4.2.1",
-    "chartjs-plugin-annotation": "^2.2.1",
-    "chartjs-plugin-datalabels": "^2.2.0",
-    "codemirror": "^6.0.1",
-    "editorjs-alert": "^1.0.3",
-    "editorjs-drag-drop": "^1.1.13",
-    "editorjs-inline-image": "^1.2.4",
-    "editorjs-mermaid": "^1.0.0",
-    "editorjs-text-color-plugin": "^2.0.2",
-    "eslint-linter-browserify": "^8.36.0",
-    "express": "^4.15.2",
-    "immutable": "^4.3.0",
-    "jsonpath": "^1.1.1",
-    "mathjs": "^11.7.0",
-    "mathlive": "^0.90.6",
-    "ngx-mqtt": "^15.0.0-alpha.1",
-    "peerjs": "^1.4.7",
-    "postcss": "^8.4.21",
-    "rxdb": "^14.3.6",
-    "rxjs": "~7.8.0",
-    "thememirror": "^2.0.1",
-    "ts-pattern": "^4.2.1",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "@angular/platform-browser": "15.2.5",
+    "@angular/platform-browser-dynamic": "15.2.5",
+    "@angular/platform-server": "15.2.5",
+    "@angular/router": "15.2.5",
+    "@angular/service-worker": "15.2.5",
+    "@codemirror/lang-javascript": "6.1.4",
+    "@cortex-js/compute-engine": "0.12.2",
+    "@editorjs/attaches": "1.3.0",
+    "@editorjs/delimiter": "1.3.0",
+    "@editorjs/editorjs": "2.26.5",
+    "@editorjs/embed": "2.5.3",
+    "@editorjs/header": "2.7.0",
+    "@editorjs/list": "1.8.0",
+    "@editorjs/marker": "1.3.0",
+    "@editorjs/table": "2.2.1",
+    "@fortawesome/fontawesome-free": "6.4.0",
+    "@jsonforms/angular": "3.0.0",
+    "@jsonforms/angular-material": "3.0.0",
+    "@jsonforms/core": "3.0.0",
+    "@nguniversal/express-engine": "15.2.0",
+    "@sotaproject/strikethrough": "1.0.1",
+    "@types/lodash": "4.14.192",
+    "autoprefixer": "10.4.14",
+    "chart.js": "4.2.1",
+    "chartjs-plugin-annotation": "2.2.1",
+    "chartjs-plugin-datalabels": "2.2.0",
+    "codemirror": "6.0.1",
+    "editorjs-alert": "1.0.3",
+    "editorjs-drag-drop": "1.1.13",
+    "editorjs-inline-image": "1.2.4",
+    "editorjs-text-color-plugin": "2.0.2",
+    "eslint-linter-browserify": "8.36.0",
+    "express": "4.15.2",
+    "immutable": "4.3.0",
+    "jsonpath": "1.1.1",
+    "mathjs": "11.7.0",
+    "mathlive": "0.90.6",
+    "mermaid": "10.1.0",
+    "ngx-mqtt": "15.0.0-alpha.1",
+    "peerjs": "1.4.7",
+    "postcss": "8.4.21",
+    "rxdb": "14.3.6",
+    "rxjs": "7.8.0",
+    "thememirror": "2.0.1",
+    "ts-pattern": "4.2.1",
+    "tslib": "2.3.0",
+    "zone.js": "0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.3",
-    "@angular/cli": "~15.2.3",
-    "@angular/compiler-cli": "^15.2.2",
-    "@editorjs/checklist": "^1.4.0",
-    "@editorjs/warning": "^1.3.0",
-    "@nguniversal/builders": "^15.2.0",
-    "@types/express": "^4.17.0",
-    "@types/jasmine": "~4.3.0",
-    "@types/jsonpath": "^0.2.0",
-    "@types/node": "^14.15.0",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "@angular-devkit/build-angular": "15.2.5",
+    "@angular/cli": "15.2.5",
+    "@angular/compiler-cli": "15.2.5",
+    "@editorjs/checklist": "1.4.0",
+    "@editorjs/warning": "1.3.0",
+    "@nguniversal/builders": "15.2.0",
+    "@types/express": "4.17.0",
+    "@types/jasmine": "4.3.0",
+    "@types/jsonpath": "0.2.0",
+    "jasmine-core": "4.5.0",
+    "karma": "6.4.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage": "2.2.0",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.0.0",
+    "typescript": "4.9.4"
   }
 }
