--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@angular/service-worker": "15.2.5",
     "@codemirror/lang-javascript": "6.1.4",
     "@cortex-js/compute-engine": "0.12.2",
-    "@editorjs/attaches": "1.3.0",
+    "@editorjs/attaches": "github:sanchezcarlosjr/attaches.git",
     "@editorjs/delimiter": "1.3.0",
     "@editorjs/editorjs": "2.26.5",
     "@editorjs/embed": "2.5.3",
