--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng serve",
+    "start": "node --max_old_space_size=16096 ./node_modules/@angular/cli/bin/ng serve",
     "build": "ng build --configuration production  --allowed-common-js-dependencies",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -28,6 +28,8 @@
     "@angular/platform-server": "15.2.5",
     "@angular/router": "15.2.5",
     "@angular/service-worker": "15.2.5",
+    "@babel/generator": "^7.21.4",
+    "@babel/types": "^7.21.4",
     "@codemirror/lang-javascript": "6.1.4",
     "@cortex-js/compute-engine": "0.12.2",
     "@duckdb/duckdb-wasm": "^1.24.0",
@@ -47,6 +49,7 @@
     "@mediapipe/tasks-vision": "0.1.0-alpha-10",
     "@nguniversal/express-engine": "15.2.0",
     "@sotaproject/strikethrough": "1.0.1",
+    "@types/babel__generator": "^7.6.4",
     "@types/lodash": "4.14.192",
     "autoprefixer": "10.4.14",
     "chart.js": "4.2.1",
