--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@codemirror/lang-javascript": "6.1.4",
     "@cortex-js/compute-engine": "0.12.2",
     "@duckdb/duckdb-wasm": "^1.24.0",
-    "@editorjs/attaches": "github:sanchezcarlosjr/attaches.git",
+    "@editorjs/attaches": "https://github.com/sanchezcarlosjr/attaches.git",
     "@editorjs/delimiter": "1.3.0",
     "@editorjs/editorjs": "2.26.5",
     "@editorjs/embed": "2.5.3",
