--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "@angular/platform-server": "15.2.5",
     "@angular/router": "15.2.5",
     "@angular/service-worker": "15.2.5",
-    "@babel/generator": "^7.21.4",
-    "@babel/types": "^7.21.4",
+    "@babel/generator": "7.21.4",
+    "@babel/types": "7.21.4",
     "@codemirror/lang-javascript": "6.1.4",
     "@cortex-js/compute-engine": "0.12.2",
-    "@duckdb/duckdb-wasm": "^1.24.0",
+    "@duckdb/duckdb-wasm": "1.24.0",
     "@editorjs/attaches": "https://github.com/sanchezcarlosjr/attaches.git",
     "@editorjs/delimiter": "1.3.0",
     "@editorjs/editorjs": "2.26.5",
@@ -49,7 +49,7 @@
     "@mediapipe/tasks-vision": "0.1.0-alpha-10",
     "@nguniversal/express-engine": "15.2.0",
     "@sotaproject/strikethrough": "1.0.1",
-    "@types/babel__generator": "^7.6.4",
+    "@types/babel__generator": "7.6.4",
     "@types/lodash": "4.14.192",
     "autoprefixer": "10.4.14",
     "chart.js": "4.2.1",
