--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/babel__generator": "7.6.4",
     "@types/lodash": "4.14.192",
     "autoprefixer": "10.4.14",
+    "buffer": "6.0.3",
     "chart.js": "4.2.1",
     "chartjs-plugin-annotation": "2.2.1",
     "chartjs-plugin-datalabels": "2.2.0",
