--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/generator": "7.21.4",
     "@babel/types": "7.21.4",
     "@codemirror/lang-javascript": "6.1.4",
+    "@codemirror/lang-python": "6.1.2",
     "@cortex-js/compute-engine": "0.12.2",
     "@duckdb/duckdb-wasm": "1.24.0",
     "@editorjs/attaches": "https://github.com/sanchezcarlosjr/attaches.git",
