--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evanotebook",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "scripts": {
     "ng": "ng",
     "start": "node --max_old_space_size=8094 ./node_modules/@angular/cli/bin/ng serve",
@@ -38,7 +38,7 @@
     "@editorjs/delimiter": "1.3.0",
     "@editorjs/editorjs": "2.26.5",
     "@editorjs/embed": "2.5.3",
-    "@editorjs/header": "2.7.0",
+    "@editorjs/header": "https://github.com/sanchezcarlosjr/header.git",
     "@editorjs/list": "1.8.0",
     "@editorjs/marker": "1.3.0",
     "@editorjs/table": "2.2.1",
@@ -46,8 +46,6 @@
     "@jsonforms/angular": "3.0.0",
     "@jsonforms/angular-material": "3.0.0",
     "@jsonforms/core": "3.0.0",
-    "@mediapipe/tasks-text": "0.1.0-alpha-10",
-    "@mediapipe/tasks-vision": "0.1.0-alpha-10",
     "@nguniversal/express-engine": "15.2.0",
     "@phigoro/editorjs-toc": "https://github.com/sanchezcarlosjr/editorjs-toc.git",
     "@sotaproject/strikethrough": "1.0.1",
