--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,24 +1,19 @@
 name: Deploy static content to GitHub Pages and Firebase Hosting
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -27,27 +22,42 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '18.10.0'
+
       - name: Install dependencies
         run: yarn
+
       - name: Build
-      - run: yarn prerender
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+        run: yarn prerender
+
+      - name: Deploy to Firebase Hosting
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ARSUS_PRODUCTION }}'
           projectId: arsus-production
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
-          # Upload entire repository
+          name: 'deploy-pages-artifact'
           path: './dist/terminal/browser'
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: 'deploy-pages-artifact'
+
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
-
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: './deploy-pages-artifact'
