--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evanotebook",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "scripts": {
     "ng": "ng",
     "start": "node --max_old_space_size=8094 ./node_modules/@angular/cli/bin/ng serve",
@@ -10,7 +10,10 @@
     "dev:ssr": "ng run terminal:serve-ssr",
     "serve:ssr": "node dist/terminal/server/main.js",
     "build:ssr": "ng build && ng run terminal:server",
-    "prerender": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng run terminal:prerender"
+    "prerender": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng run terminal:prerender",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -30,11 +33,13 @@
     "@angular/service-worker": "15.2.5",
     "@babel/generator": "7.21.4",
     "@babel/types": "7.21.4",
+    "@chainsafe/libp2p-noise": "^11.0.4",
     "@codemirror/lang-javascript": "6.1.4",
     "@codemirror/lang-python": "6.1.2",
     "@cortex-js/compute-engine": "0.12.2",
     "@duckdb/duckdb-wasm": "1.24.0",
     "@editorjs/attaches": "https://github.com/sanchezcarlosjr/attaches.git",
+    "@editorjs/checklist": "1.4.0",
     "@editorjs/delimiter": "1.3.0",
     "@editorjs/editorjs": "2.26.5",
     "@editorjs/embed": "2.5.3",
@@ -46,6 +51,12 @@
     "@jsonforms/angular": "3.0.0",
     "@jsonforms/angular-material": "3.0.0",
     "@jsonforms/core": "3.0.0",
+    "@libp2p/bootstrap": "^8.0.0",
+    "@libp2p/kad-dht": "^9.1.5",
+    "@libp2p/mplex": "8.0.1",
+    "@libp2p/webrtc": "1.1.10",
+    "@libp2p/websockets": "6.0.1",
+    "@multiformats/multiaddr": "12.1.2",
     "@nguniversal/express-engine": "15.2.0",
     "@phigoro/editorjs-toc": "https://github.com/sanchezcarlosjr/editorjs-toc.git",
     "@sotaproject/strikethrough": "1.0.1",
@@ -64,7 +75,9 @@
     "eslint-linter-browserify": "8.36.0",
     "express": "4.15.2",
     "immutable": "4.3.0",
+    "it-pushable": "3.1.3",
     "jsonpath": "1.1.1",
+    "libp2p": "0.44.0",
     "mathjs": "11.7.0",
     "mathlive": "0.90.6",
     "mermaid": "10.1.0",
@@ -82,12 +95,13 @@
     "@angular-devkit/build-angular": "15.2.5",
     "@angular/cli": "15.2.5",
     "@angular/compiler-cli": "15.2.5",
-    "@editorjs/checklist": "1.4.0",
+    "@cypress/schematic": "2.5.0",
     "@editorjs/warning": "1.3.0",
     "@nguniversal/builders": "15.2.0",
     "@types/express": "4.17.0",
     "@types/jasmine": "4.3.0",
     "@types/jsonpath": "0.2.0",
+    "cypress": "latest",
     "jasmine-core": "4.5.0",
     "karma": "6.4.0",
     "karma-chrome-launcher": "3.1.0",
