--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -11,7 +11,10 @@
           "/index.html",
           "/manifest.webmanifest",
           "/*.css",
-          "/*.js"
+          "/*.js",
+          "/*.json",
+          "/*.xml",
+          "/*.csv"
         ]
       }
     },
@@ -22,7 +25,7 @@
       "resources": {
         "files": [
           "/assets/**",
-          "/*.(svg|cur|jpg|jpeg|png|apng|webp|wasm|avif|gif|otf|ttf|tflite|task|woff|woff2)"
+          "/*.(svg|cur|jpg|jpeg|png|apng|webp|wasm|avif|gif|otf|ttf|tflite|task|woff|woff2|pdf|sav|tiff|txt)"
         ]
       }
     }
