feat: dispatch changes when someone swap blocks

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@angular/service-worker": "15.2.5",
     "@babel/generator": "7.21.4",
     "@babel/types": "7.21.4",
-    "@codemirror/lang-html": "^6.4.3",
+    "@codemirror/lang-html": "6.4.3",
     "@codemirror/lang-javascript": "6.1.4",
     "@codemirror/lang-python": "6.1.2",
     "@cortex-js/compute-engine": "0.12.2",
@@ -59,7 +59,7 @@
     "chartjs-plugin-datalabels": "2.2.0",
     "codemirror": "6.0.1",
     "editorjs-alert": "1.0.3",
-    "editorjs-drag-drop": "1.1.13",
+    "editorjs-drag-drop": "https://github.com/sanchezcarlosjr/editorjs-drag-drop",
     "editorjs-inline-image": "1.2.4",
     "editorjs-text-color-plugin": "2.0.2",
     "eslint-linter-browserify": "8.36.0",
@@ -75,7 +75,7 @@
     "postcss": "8.4.21",
     "rxdb": "14.3.6",
     "rxjs": "7.8.0",
-    "serpapi": "^1.1.1",
+    "serpapi": "1.1.1",
     "thememirror": "2.0.1",
     "ts-pattern": "4.2.1",
     "tslib": "2.3.0",
