--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@duckdb/duckdb-wasm": "1.24.0",
     "@editorjs/attaches": "https://github.com/sanchezcarlosjr/attaches.git",
     "@editorjs/delimiter": "1.3.0",
-    "@editorjs/editorjs": "2.26.5",
+    "@editorjs/editorjs": "2.27.0",
     "@editorjs/embed": "2.5.3",
     "@editorjs/header": "https://github.com/sanchezcarlosjr/header.git",
     "@editorjs/list": "1.8.0",
@@ -59,11 +59,10 @@
     "chartjs-plugin-datalabels": "2.2.0",
     "codemirror": "6.0.1",
     "editorjs-alert": "1.0.3",
-    "editorjs-drag-drop": "https://github.com/sanchezcarlosjr/editorjs-drag-drop",
+    "editorjs-drag-drop": "1.1.13",
     "editorjs-inline-image": "1.2.4",
     "editorjs-text-color-plugin": "2.0.2",
     "eslint-linter-browserify": "8.36.0",
-    "express": "4.15.2",
     "immutable": "4.3.0",
     "jsonpath": "1.1.1",
     "langchain": "0.0.72",
@@ -82,6 +81,7 @@
     "zone.js": "0.12.0"
   },
   "devDependencies": {
+    "express": "4.18.2",
     "@angular-devkit/build-angular": "15.2.5",
     "@angular/cli": "15.2.5",
     "@angular/compiler-cli": "15.2.5",
@@ -91,6 +91,7 @@
     "@types/express": "4.17.0",
     "@types/jasmine": "4.3.0",
     "@types/jsonpath": "0.2.0",
+    "cypress": "12.13.0",
     "jasmine-core": "4.5.0",
     "karma": "6.4.0",
     "karma-chrome-launcher": "3.1.0",
