--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evanotebook",
-  "version": "3.2.0",
+  "version": "4.0.0",
   "scripts": {
     "ng": "ng",
     "start": "node --max_old_space_size=8094 ./node_modules/@angular/cli/bin/ng serve",
@@ -63,25 +63,31 @@
     "editorjs-inline-image": "1.2.4",
     "editorjs-text-color-plugin": "2.0.2",
     "eslint-linter-browserify": "8.36.0",
+    "helia": "1.0.4",
     "immutable": "4.3.0",
+    "ipfs-core": "0.12.2",
+    "ipfs-http-client": "60.0.1",
     "jsonpath": "1.1.1",
     "langchain": "0.0.72",
     "mathjs": "11.7.0",
     "mathlive": "0.90.6",
     "mermaid": "10.2.1",
     "ngx-mqtt": "15.0.0-alpha.1",
+    "orbit-db": "0.29.0",
     "peerjs": "1.4.7",
     "postcss": "8.4.21",
     "rxdb": "14.3.6",
     "rxjs": "7.8.0",
     "serpapi": "1.1.1",
+    "swipl-wasm": "3.4.5",
     "thememirror": "2.0.1",
     "ts-pattern": "4.2.1",
     "tslib": "2.3.0",
+    "workerpool": "^6.4.0",
     "zone.js": "0.12.0"
   },
   "devDependencies": {
-    "express": "4.18.2",
+    "@angular-builders/custom-webpack": "15.0.0",
     "@angular-devkit/build-angular": "15.2.5",
     "@angular/cli": "15.2.5",
     "@angular/compiler-cli": "15.2.5",
@@ -91,13 +97,18 @@
     "@types/express": "4.17.0",
     "@types/jasmine": "4.3.0",
     "@types/jsonpath": "0.2.0",
-    "cypress": "12.13.0",
+    "cypress": "4.2.0",
+    "express": "4.18.2",
     "jasmine-core": "4.5.0",
     "karma": "6.4.0",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "2.2.0",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.0.0",
+    "node-polyfill-webpack-plugin": "2.0.1",
     "typescript": "4.9.4"
+  },
+  "browser": {
+    "fs": false
   }
 }
