chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node --max_old_space_size=8094 ./node_modules/@angular/cli/bin/ng serve",
+    "start": "node --max_old_space_size=8094 ./node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 --disable-host-check",
     "build": "ng build --configuration production  --allowed-common-js-dependencies",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -31,18 +31,20 @@
     "@babel/generator": "7.21.4",
     "@babel/types": "7.21.4",
     "@codemirror/lang-html": "6.4.3",
-    "@codemirror/lang-javascript": "6.1.4",
+    "@codemirror/lang-javascript": "6.1.9",
     "@codemirror/lang-python": "6.1.2",
     "@cortex-js/compute-engine": "0.12.2",
     "@duckdb/duckdb-wasm": "1.24.0",
     "@editorjs/attaches": "https://github.com/sanchezcarlosjr/attaches.git",
+    "@editorjs/checklist": "1.4.0",
     "@editorjs/delimiter": "1.3.0",
-    "@editorjs/editorjs": "2.27.0",
+    "@editorjs/editorjs": "2.28.0-rc.1",
     "@editorjs/embed": "2.5.3",
     "@editorjs/header": "https://github.com/sanchezcarlosjr/header.git",
     "@editorjs/list": "1.8.0",
     "@editorjs/marker": "1.3.0",
     "@editorjs/table": "2.2.1",
+    "@editorjs/warning": "1.3.0",
     "@fortawesome/fontawesome-free": "6.4.0",
     "@jsonforms/angular": "3.0.0",
     "@jsonforms/angular-material": "3.0.0",
@@ -54,7 +56,7 @@
     "@types/lodash": "4.14.192",
     "autoprefixer": "10.4.14",
     "buffer": "6.0.3",
-    "chart.js": "4.2.1",
+    "chart.js": "4.3.0",
     "chartjs-plugin-annotation": "2.2.1",
     "chartjs-plugin-datalabels": "2.2.0",
     "codemirror": "6.0.1",
@@ -64,26 +66,26 @@
     "editorjs-text-color-plugin": "2.0.2",
     "eslint-linter-browserify": "8.36.0",
     "helia": "1.0.4",
-    "immutable": "4.3.0",
+    "immutable": "4.3.1",
     "ipfs-core": "0.12.2",
     "ipfs-http-client": "60.0.1",
     "jsonpath": "1.1.1",
     "langchain": "0.0.72",
     "mathjs": "11.7.0",
     "mathlive": "0.90.6",
-    "mermaid": "10.2.1",
-    "ngx-mqtt": "15.0.0-alpha.1",
+    "mermaid": "10.2.4",
+    "ngx-mqtt": "16.1.0",
     "orbit-db": "0.29.0",
     "peerjs": "1.4.7",
     "postcss": "8.4.21",
-    "rxdb": "14.3.6",
+    "rxdb": "14.15.0",
     "rxjs": "7.8.0",
     "serpapi": "1.1.1",
     "swipl-wasm": "3.4.5",
     "thememirror": "2.0.1",
     "ts-pattern": "4.2.1",
     "tslib": "2.3.0",
-    "workerpool": "^6.4.0",
+    "workerpool": "6.4.0",
     "zone.js": "0.12.0"
   },
   "devDependencies": {
@@ -91,13 +93,11 @@
     "@angular-devkit/build-angular": "15.2.5",
     "@angular/cli": "15.2.5",
     "@angular/compiler-cli": "15.2.5",
-    "@editorjs/checklist": "1.4.0",
-    "@editorjs/warning": "1.3.0",
     "@nguniversal/builders": "15.2.0",
     "@types/express": "4.17.0",
     "@types/jasmine": "4.3.0",
     "@types/jsonpath": "0.2.0",
-    "cypress": "4.2.0",
+    "cypress": "4.12.1",
     "express": "4.18.2",
     "jasmine-core": "4.5.0",
     "karma": "6.4.0",
