feat: download diagramas as svg and png

--- a/package.json
+++ b/package.json
@@ -60,11 +60,13 @@
     "chartjs-plugin-annotation": "2.2.1",
     "chartjs-plugin-datalabels": "2.2.0",
     "codemirror": "6.0.1",
+    "codemirror-lang-mermaid": "^0.3.0",
     "editorjs-alert": "1.0.3",
     "editorjs-drag-drop": "1.1.13",
     "editorjs-inline-image": "1.2.4",
     "editorjs-text-color-plugin": "2.0.2",
     "eslint-linter-browserify": "8.36.0",
+    "export-svg": "^0.2.0",
     "helia": "1.0.4",
     "immutable": "4.3.1",
     "ipfs-core": "0.12.2",
