--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@editorjs/table": "2.2.1",
     "@editorjs/warning": "1.3.0",
     "@fortawesome/fontawesome-free": "6.4.0",
+    "@gear-js/api": "^0.32.3",
     "@jsonforms/angular": "3.0.0",
     "@jsonforms/angular-material": "3.0.0",
     "@jsonforms/core": "3.0.0",
