--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@angular/service-worker": "15.2.5",
     "@babel/generator": "7.21.4",
     "@babel/types": "7.21.4",
+    "@chainsafe/libp2p-noise": "12.0.0",
+    "@chainsafe/libp2p-yamux": "4.0.1",
     "@codemirror/lang-html": "6.4.3",
     "@codemirror/lang-javascript": "6.1.9",
     "@codemirror/lang-python": "6.1.2",
@@ -51,8 +53,17 @@
     "@jsonforms/angular": "3.0.0",
     "@jsonforms/angular-material": "3.0.0",
     "@jsonforms/core": "3.0.0",
+    "@libp2p/bootstrap": "8.0.0",
+    "@libp2p/kad-dht": "9.3.3",
+    "@libp2p/mplex": "8.0.1",
+    "@libp2p/webrtc": "1.2.0",
+    "@libp2p/websockets": "6.0.1",
+    "@libp2p/webtransport": "2.0.1",
     "@nguniversal/express-engine": "15.2.0",
     "@phigoro/editorjs-toc": "https://github.com/sanchezcarlosjr/editorjs-toc.git",
+    "@polkadot/api": "^10.9.1",
+    "@polkadot/types": "^10.9.1",
+    "@polkadot/util-crypto": "^12.3.2",
     "@sotaproject/strikethrough": "1.0.1",
     "@types/babel__generator": "7.6.4",
     "@types/lodash": "4.14.192",
@@ -69,13 +80,15 @@
     "editorjs-text-color-plugin": "2.0.2",
     "eslint-linter-browserify": "8.36.0",
     "export-svg": "0.2.0",
-    "gluesql": "latest",
+    "gluesql": "0.14.3",
     "helia": "1.0.4",
     "immutable": "4.3.1",
     "ipfs-core": "0.12.2",
     "ipfs-http-client": "60.0.1",
     "jsonpath": "1.1.1",
     "langchain": "0.0.72",
+    "new-libp2p-gossipsub": "npm:@chainsafe/libp2p-gossipsub@9.1.0",
+    "new-libp2p": "npm:libp2p@0.45.9",
     "mathjs": "11.7.0",
     "mathlive": "0.90.6",
     "mermaid": "10.2.4",
