--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,9 +17,9 @@ jobs:
         with:
           node-version: '18.10.0'
       - name: Install dependencies
-        run: npm i --force
+        run: yarn --force
       - name: Prerender
-        run: npm run prerender
+        run: yarn prerender
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - uses: FirebaseExtended/action-hosting-deploy@v0
