--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/node,cypressio,angular
-# Edit at https://www.toptal.com/developers/gitignore?templates=node,cypressio,angular
+# Created by https://www.toptal.com/developers/gitignore/api/yarn,node,cypressio,angular,firebase
+# Edit at https://www.toptal.com/developers/gitignore?templates=yarn,node,cypressio,angular,firebase
 
 ### Angular ###
 ## Angular ##
@@ -42,6 +42,15 @@ cypress/reports/*
 cypress/screenshots/*
 cypress/videos/*
 cypress/downloads/*
+
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
 
 ### Node ###
 # Logs
@@ -182,4 +191,21 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
-# End of https://www.toptal.com/developers/gitignore/api/node,cypressio,angular
+### yarn ###
+# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+
+.yarn/*
+!.yarn/releases
+!.yarn/patches
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+
+# if you are NOT using Zero-installs, then:
+# comment the following lines
+!.yarn/cache
+
+# and uncomment the following lines
+# .pnp.*
+
+# End of https://www.toptal.com/developers/gitignore/api/yarn,node,cypressio,angular,firebase
