--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:ssr": "ng run terminal:serve-ssr",
     "serve:ssr": "node dist/terminal/server/main.js",
     "build:ssr": "ng build && ng run terminal:server",
-    "prerender": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng run terminal:prerender"
+    "prerender": "node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng run terminal:prerender",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -111,13 +112,21 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "15.0.0",
     "@angular-devkit/build-angular": "15.2.5",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "15.2.5",
     "@angular/compiler-cli": "15.2.5",
     "@nguniversal/builders": "15.2.0",
     "@types/express": "4.17.0",
     "@types/jasmine": "4.3.0",
     "@types/jsonpath": "0.2.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
     "cypress": "13.3.2",
+    "eslint": "^8.33.0",
     "express": "4.18.2",
     "jasmine-core": "4.5.0",
     "karma": "6.4.0",
